mule-user-guide/v/3.7/application-format.adoc
= Mule Application Format
:keywords: deploy, esb, amc, cloudhub, on premises, on premise

The deployment unit of a Mule application encapsulates everything an application needs to function, such as libraries, custom code, configuration, deployment descriptor and any environment properties accompanying the application. It exists in one of two formats:

* `.zip` file (a regular archive with a 'zip' extension)
* unpacked version of the same `.zip` file (exploded app)


[source, code, linenums]
----
/
 \- classes                 // application-specific expanded resources (e.g. logging configuration files, properties, etc
 |- lib                     // application-specific jars
 |- plugins                 // application plugins files
    \- lib                  // application shared plugin jars (FROM 3.7 and +)
 |- mule-config.xml         // Main Mule configuration file, also monitored for changes
 |- mule-deploy.properties  // Application deployment descriptor (optional)
 |- mule-app.properties     // custom properties to be added to the registry instance used by the application (optional)
 |- *.grf files             // produced by DataMapper to plot its data mapping
----

Mule supports the deployment of both packaged (zipped) and exploded (unzipped) applications.

You can share libraries between applications via the link:/mule-user-guide/v/3.7/mule-application-deployment-descriptor[*application deployment descriptor*] attribute.
